[package]
name = "crypto-playground"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rsa = "0.9.7"
rug = "1.27"
serde = { version = "1.0.216", features = ["derive"] }
sha3 = "0.10"

[build-dependencies]
cc = "1.2.12"
git2 = "0.20"
num_cpus = "1.16"

